<resources>
    <!-- Name of the App -->
    <string name="app_name">TreeChat</string>

    <!-- Text for the button to sign in users using Google's authentication -->
    <string name="login_google">Sign In with Google</string>

    <!-- Text shown at the top of the {@link WelcomeActivity} below the name of the app -->
    <string name="welcome_text">A simple chat app for demonstration purposes</string>

    <!-- Description of the image displayed at the center of {@link WelcomeActivity} -->
    <string name="welcome_image_description">An illustration used to welcome users at the starting screen.</string>

    <!-- Text displayed on the Create Room button in the {@link RoomsCatalogActivity} -->
    <string name="create_room_btn">Create</string>

    <!-- Text shown as hint for the input field to create a new room -->
    <string name="create_room_field_hint">Create a new Room</string>

    <!-- Title of the Members section on the {@link RoomActivity} -->
    <string name="member_section_title">Members</string>

    <!-- Title of the Message section on the {@link RoomActivity} -->
    <string name="message_section_title">Messages</string>

    <!-- Text shown as hint for the input field to write a message -->
    <string name="message_field_hint">Write your message…</string>

    <!-- Text displayed on the Send Message button in the {@link RoomActivity} -->
    <string name="send_msg_btn_text">Send</string>
</resources>